--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "gide segid",
   "license": "ISC",
   "dependencies": {
+    "@mollie/api-client": "^2.0.3",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.18.2",
